update all repos

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-build/
-install/
-.vscode/
+/build/
+/install/
+/.vscode/
+/benchmarks/*
+!/benchmarks/bench.mk
+!/benchmarks/dparser
+!/benchmarks/example
