--- a/push-pop-counter/CMakeLists.txt
+++ b/push-pop-counter/CMakeLists.txt
@@ -1,10 +1,16 @@
 cmake_minimum_required(VERSION 3.6)
 project(ppcount)
 
-add_library(ppcount SHARED main.cpp)
+
 find_package(DynamoRIO)
 if (NOT DynamoRIO_FOUND)
   message(FATAL_ERROR "DynamoRIO package required to build")
 endif(NOT DynamoRIO_FOUND)
+
+add_library(ppcount SHARED main.cpp)
 configure_DynamoRIO_client(ppcount)
-use_DynamoRIO_extension(ppcount drmgr drreg)
+
+use_DynamoRIO_extension(ppcount drmgr)
+use_DynamoRIO_extension(ppcount drreg)
+use_DynamoRIO_extension(ppcount drx)
+use_DynamoRIO_extension(ppcount droption)
